# slf-extract-prv

./: LICENSE  README.md  pyproject.toml
slurm/: extract.sbatch
src/slf_extract_prv/: __init__.py  extract_ibis.py
